# sea-surface-temperatures

./: .cursorignore  .cursorrules  .dockerignore  .env  .gitignore  Dockerfile  ERDDAP Documentation  README.md  analyze_nc4.py  app.js  app_architecture_notebook.md  bridge_scraper.py  color_scale.json  composite-sst.py  convert_to_geojson.py  currents-to-geojson.py  database_prompt.md  deploy.sh  docker-compose.yml  explore-dataset.py  generate-sst-layer.py  generate-sst.py  generate_east_coast_sst.py  generate_sst_map.py  generate_sst_maps.py  gulf of maine.hdf  index.html  instructions.md  main.py  make-geotif.sh  make-image.py  make-tileset-mapbox.py  make-vector.py  nginx.conf  package-lock.json  package.json  plot-mapbox.py  process_local.py  prompt.md  recipe.json  (+8 more)
config/: env.py  regions.py  settings.py
data/: capecod.nc4  capecod_classic_simple.nc  northeast.nc4
experiments/: config.js  make-isotherm.py  processData.js  (+1 more)
sst-processor/: .env.example  README.md  color_scale.json  process_local.py  pyproject.toml  read-hdf.py
sst-processor/src/: full_image_generator.py  image_generator.py  tile_generator.py
sst-processor/src/config/: regions.py  settings.py  sources.py
sst-processor/src/data/: fetcher.py  generator.py  processor.py
sst-processor/src/data/fetchers/: base.py  eastcoast.py  erddap.py
sst-processor/src/data/processors/: image_processor.py  sst_processor.py
sst-processor/src/fetchers/: base.py  eastcoast.py  erddap.py
sst-processor/src/processors/: image_processor.py  sst_processor.py
sst-processor/src/tiles/: generator.py
(+104 files in other folders)
