[tool.poetry]
name = "sst-processor"
version = "0.1.0"
description = "Sea Surface Temperature Data Processing Pipeline"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"
pydantic-settings = "^2.0"
xarray = "^2023.1"
netCDF4 = "^1.6"
rasterio = "^1.3"
rio-tiler = "^4.1"
numpy = "^1.23"
asyncio = "^3.4"
aiohttp = "^3.8"
pytest = "^7.3"
pytest-asyncio = "^0.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
